--- a/Tabang-Hub/Tabang-Hub/Views/Volunteer/EventDetails.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Volunteer/EventDetails.cshtml
@@ -11,6 +11,8 @@
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <link href="~/Content/Css/opportunityCarousel.css" rel="stylesheet" />
 <style>
     .carousel-inner img {
@@ -79,6 +81,22 @@
     #counter{
         margin-top: 10px;
     }
+
+    .card-text {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2; /* Limit to 2 lines */
+        -webkit-box-orient: vertical;
+    }
+
+    .card-title {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 1; /* Limit to 1 line */
+        -webkit-box-orient: vertical;
+    }
 </style>
 
 <div class="container mt-5">
@@ -95,25 +113,51 @@
         </div>
         <hr />
         <div class="row">
+            @*<div class="col-md-8">
+            <div id="carouselExampleControls" class="carousel slide carousel-container" data-ride="carousel">
+                <div class="carousel-inner">
+                    @for (int i = 0; i < Model.detailsEventImage.Count; i++)
+                    {
+                        var pic = Model.detailsEventImage[i];
+                        <div class="carousel-item @(i == 0 ? "active" : "")">
+                            <img src="~/Content/IdPicture/@pic.eventImage" class="d-block w-100" alt="Event Image">
+                        </div>
+                    }
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>*@
             <div class="col-md-8">
-                <div id="carouselExampleControls" class="carousel slide carousel-container" data-ride="carousel">
+                <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        @for (int i = 0; i < Model.detailsEventImage.Count; i++)
+                        {
+                            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="@i" class="@(i == 0 ? "active" : "")" aria-current="@(i == 0 ? "true" : "false")" aria-label="Slide @i"></button>
+                        }
+                    </div>
                     <div class="carousel-inner">
                         @for (int i = 0; i < Model.detailsEventImage.Count; i++)
                         {
-                            var pic = Model.detailsEventImage[i];
                             <div class="carousel-item @(i == 0 ? "active" : "")">
-                                <img src="~/Content/IdPicture/@pic.eventImage" class="d-block w-100" alt="Event Image">
+                                <img src="@Url.Content("~/Content/IdPicture/" + Model.detailsEventImage[i].eventImage)" class="d-block w-100 img-fluid fixed-size-img border border-primary" alt="Event Image">
                             </div>
                         }
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
             </div>
             <div class="col-md-4 event-details">
@@ -139,8 +183,14 @@
 
                     <label id="counter">Volunteer counter</label>
                     <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: @Model.listOfEvents.Count(m => m.Event_Id == location.Event_Id)%;" aria-valuenow="@location.Maximum_Volunteer" aria-valuemin="0" aria-valuemax="100"></div>
-                        <div class="progress-label">@location.Maximum_Volunteer</div>
+                        @{
+                            double? Vol = Model.volunteers.Count();
+
+                            Vol = (Vol / location.Maximum_Volunteer) * location.Maximum_Volunteer;
+                            Console.Write(Vol);
+                        }
+                        <div class="progress-bar" role="progressbar" style="width: @Html.Raw(Vol)%;" aria-valuenow="@location.Maximum_Volunteer" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-label">@Model.volunteers.Count()/@location.Maximum_Volunteer</div>
                     </div>
                 }
                 <hr />
@@ -180,10 +230,19 @@
                     <div class="col-md-3">
                         <h3>Contact us</h3>
                         <p>
-                            @info.phoneNum
+                            <i style="font-size:15px" class="fa">&#xf095;</i> @info.phoneNum
                         </p>
+
                         <p>
-                            @info.orgEmail
+                            <i style="font-size:15px" class="fa">&#xf1a0;</i> @info.orgEmail
+                        </p>
+
+                        <p>
+                            <i style="font-size:15px" class="fa">&#xf09a;</i> Facebook
+                        </p>
+
+                        <p>
+                            <i style="font-size:15px" class="fa">&#xf16d;</i> Instagram
                         </p>
                     </div>
                 }
@@ -194,8 +253,8 @@
 
 <div class="similar-opportunities-container">
     <div class="header">
-        <h2>Similar opportunities</h2>
-        <a href="#" class="see-all">See all</a>
+        <h2>Be Involved</h2>
+        @*<a href="#" class="see-all">See all</a>*@
     </div>
     <div class="similar-opportunities-carousel">
         <div class="carousel-buttons-opportunities">
@@ -203,47 +262,17 @@
             <button class="carousel-button-opportunities next-button-opportunities">&gt;</button>
         </div>
         <div class="carousel-track-opportunities">
-            <div class="opportunity-card">
-                <img src="~/Content/images/tabanghub3.png" alt="Tech Systems Set Up">
-                <div class="card-content">
-                    <p>PROJECT | 6-7 WEEKS</p>
-                    <h3>Tech Systems Set Up 1</h3>
-                    <p>for Jews of the Melbourne CBD</p>
+            @foreach (var lstEvent in Model.orgOtherEvent)
+            {
+                <div class="opportunity-card">
+                    <img src="~/Content/images/tabanghub3.png" alt="Tech Systems Set Up">
+                    <div class="card-content">
+                        <p>PROJECT | 6-7 WEEKS</p>
+                        <h3 class="card-title">@lstEvent.Event_Title</h3>
+                        <p class="card-text">@lstEvent.Event_Description</p>
+                    </div>
                 </div>
-            </div>
-            <div class="opportunity-card">
-                <img src="~/Content/images/tabanghub3.png" alt="Website Set Up (CMS-Based)">
-                <div class="card-content">
-                    <p>PROJECT | 4-9 WEEKS</p>
-                    <h3>Website Set Up (CMS-Based) 2</h3>
-                    <p>for The Pop-Up Village, Designing Justice + Designing Spaces</p>
-                </div>
-            </div>
-            <div class="opportunity-card">
-                <img src="~/Content/images/tabanghub3.png" alt="Artificial Intelligence">
-                <div class="card-content">
-                    <p>PHONE CALL | 1 HOUR</p>
-                    <h3>Artificial Intelligence 3</h3>
-                    <p>for Essential Theatre, Inc</p>
-                </div>
-            </div>
-            <div class="opportunity-card">
-                <img src="~/Content/images/tabanghub3.png" alt="Artificial Intelligence">
-                <div class="card-content">
-                    <p>PHONE CALL | 1 HOUR</p>
-                    <h3>Artificial Intelligence 4</h3>
-                    <p>for Essential Theatre, Inc</p>
-                </div>
-            </div>
-            <div class="opportunity-card">
-                <img src="~/Content/images/tabanghub3.png" alt="Artificial Intelligence">
-                <div class="card-content">
-                    <p>PHONE CALL | 1 HOUR</p>
-                    <h3>Artificial Intelligence 5</h3>
-                    <p>for Essential Theatre, Inc</p>
-                </div>
-            </div>
-            <!-- Add more cards as needed -->
+            }
         </div>
     </div>
 </div>
@@ -264,6 +293,7 @@
             success: function (response) {
                 if (response.success) {
                     console.log("Apply Success");
+                    location.reload();
                 } else {
                     console.log("Already apply.");
                 }
@@ -311,6 +341,7 @@
         // Ensure the back button is always visible
         prevButton.style.visibility = 'visible';
         // The next button is always visible, no need to hide it
+        nextButton.style.visibility = 'visible';
     }
 
     // Initial setup
